<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back_green"
    >
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical" >
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <TextView 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_snd_times"
            android:textSize="@dimen/text_size_20dp"
            />
        
        <EditText 
            android:id="@+id/et_snd_times"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:text="200"
            />
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <TextView 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_snd_packet_len"
            android:textSize="@dimen/text_size_20dp"
            />
        
        <EditText 
            android:id="@+id/et_snd_packet_len"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:text="4096"
            />
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_vertical"
        >
        <TextView 
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/tv_packet_add"
            android:layout_gravity="center_vertical"
            android:textSize="@dimen/text_size_20dp"
            /> 
        
        <RadioGroup
            android:id="@+id/group_choose"
            android:layout_width="152dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RadioButton 
                android:id="@+id/rb_yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_ok"
                />
            <RadioButton 
                android:id="@+id/rb_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_cancel"
                android:checked="true"
                />
        </RadioGroup>
        
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_vertical"
        >
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_snd_data"
            android:layout_gravity="center_vertical"
            android:textSize="@dimen/text_size_20dp"
            /> 
        
        <RadioGroup
            android:id="@+id/group_send_data"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RadioButton 
                android:id="@+id/rb_fix_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fix_data"
                />
            <RadioButton 
                android:id="@+id/rb_random_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/random_data"
                android:checked="true"
                />
        </RadioGroup>
        
        <EditText 
            android:id="@+id/et_data_fix"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:visibility="gone"
            />
        
    </LinearLayout>
    
    

</LinearLayout>
</ScrollView>